# llm-correct

./: .gitignore  README.md  llm-correct.py  pyproject.toml  wrapper_correct.sh
.github/workflows/: sanitize.yaml
export/: debile_mais_pastrop  exr
llmcorrect/: __main__.py  _ollama.py  exception.py  py.typed
src/: ollama_correct.py
