[tool.poetry]
name = "llm-correct"
version = "0.1.0"
description = "Autocorrection sythaxique"
authors = ["user1 <user1>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ollama = "^0.2.1"
pyperclip = "^1.8.2"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
