[tool.poetry]
name = "llm-correct"
version = "0.2.0"
description = "Autocorrection sythaxique"
authors = ["user1 <user1>"]
readme = "README.md"
packages = [
    { include = 'llmcorrect' },
]

[tool.poetry.dependencies]
python      = "^3.8"
ollama      = "0.2.*"
pyperclip   = "1.*"
click       = "8.*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
